@@ -110,8 +110,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<release>14</release>
+					<source>14</source>
+					<target>14</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
@@ -119,9 +121,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<forkCount>3</forkCount>
+					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m --illegal-access=permit</argLine>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m --illegal-access=permit --enable-preview</argLine>
 				</configuration>
 			</plugin>
 
@@ -129,20 +131,18 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
+					<argLine>--illegal-access=permit --enable-preview</argLine>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 
 	<distributionManagement>
-    	<site>
-      		<id>magex</id>
-      		<url>https://github.com/magex9/api-java/</url>
-    	</site>
-  	</distributionManagement>
+		<site>
+			<id>magex</id>
+			<url>https://github.com/magex9/api-java/</url>
+		</site>
+	</distributionManagement>
 
 </project>
